wip: java custom strategies evaluator, remove need for jackson